Fix spacing on small vieport

--- a/src/styles/components/_input-radio-button-group.scss
+++ b/src/styles/components/_input-radio-button-group.scss
@@ -9,6 +9,10 @@
   flex-flow: row wrap;
   gap: space(lg);
 
+  &:not([aria-invalid='true']) {
+    gap: space(xs) space(lg);
+  }
+
   .bsds-input-error {
     width: 100%;
     margin: 0;
